# pymadoka

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/plans/: 2026-07-18-typed-errors-and-candidates.md
pymadoka/: __init__.py  cli.py  connection.py  controller.py  errors.py  feature.py  mqtt.py
pymadoka/features/: eye_brightness.py  setpoint.py  temperatures.py
tests/: test_candidates.py  test_errors.py  test_pair_timeout.py  test_pairing_escalation.py  test_pairing_message.py  test_setpoint.py  test_transport.py
