[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
# Distribution renamed from upstream "pymadoka" (taken on PyPI); the import
# package stays `pymadoka`. Also forces HA to install fresh: HA never
# reinstalls a git requirement whose dist name is already present.
name = "pymadoka-ng"
version = "0.3.5"
description = "A library to control Daikin BRC1H (Madoka) thermostats over Bluetooth LE"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Manuel Durán", email = "manuelduran@gmail.com" },
]
maintainers = [
    { name = "dasimon135" },
]
requires-python = ">=3.11"
keywords = ["thermostat", "homeautomation", "bluetooth", "daikin", "brc1h", "madoka", "homeassistant"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Home Automation",
]
dependencies = [
    "bleak>=0.21",
    "bleak-retry-connector>=3.4",
]

[project.optional-dependencies]
cli = ["click", "pyyaml"]
mqtt = ["click", "pyyaml", "asyncio-mqtt"]
test = ["pytest", "pytest-asyncio"]

[project.urls]
Homepage = "https://github.com/dasimon135/pymadoka"
Repository = "https://github.com/dasimon135/pymadoka"
Issues = "https://github.com/dasimon135/pymadoka/issues"
Changelog = "https://github.com/dasimon135/pymadoka/releases"

[project.scripts]
pymadoka = "pymadoka.cli:cli"
pymadoka-mqtt = "pymadoka.mqtt:run"

[tool.setuptools.packages.find]
include = ["pymadoka*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# Explicit -p: the suite runs with PYTEST_DISABLE_PLUGIN_AUTOLOAD=1, so the
# asyncio plugin must be loaded here instead of via entry-point autoload.
addopts = "-p pytest_asyncio.plugin"
asyncio_mode = "strict"
